--- a/index.html
+++ b/index.html
@@ -13,11 +13,152 @@
 </head>
 <body>
 
-    <header class="header"></header>
+    <header class="header">
+        <img class="logo" src="https://picsum.photos/200" alt="Raywater Cottage Resort logo">
+        <h1>Raywater Cottage Resort</h1>
+    </header>
 
-    <main></main>
+    <main>
+        <section class="section hero">
+            <img src="https://picsum.photos/200" alt="Father and daughter overlooking the lake at night">
+            <h2 class="section__title">Reconnect. Recharge. Your way.</h2>
+            <a href="#">Explore</a>
+        </section>
 
-    <footer class="footer"></footer>
+        <section class="section welcome">
+            <img class="logo" src="https://picsum.photos/200" alt="Raywater Cottage Resort logo">
+            <p>Welcome to</p>
+            <h2 class="section__title">Raywater Cottage Resort</h2>
+            <p>Founded over 50 years ago on Lake Muskoka, Raywater is a summer resort that strives to offer relaxing and restful experiences for you and your family.</p>
+        </section>
+
+        <section class="section discover">
+            <h2 class="section__title">Discover</h2>
+            <h3>activities the whole family can enjoy</h3>
+            <a href="#">Explore</a>
+        </section>
+
+        <section class="section relax">
+            <h2 class="section__title">How do you relax?</h2>
+            <p>Whether you're looking for something with a view or something cozy, we're sure to have something to accommodate you.</p>
+            <a href="#">Explore</a>
+        </section>
+
+        <section class="section icons">
+            <!-- <h2>Something something something</h2> -->
+            <div class="icons__icon">
+                <img src="https://picsum.photos/200" alt="Online booking">
+                <h2>Online booking</h2>
+                <p>Planning an escape has never been easier.</p>
+            </div>
+            <div>
+                <img src="https://picsum.photos/200" alt="Personalized experience">
+                <h2>Personalized experience</h2>
+                <p>Our staff are here to help you create your ideal experience.</p>
+            </div>
+            <div>
+                <img src="https://picsum.photos/200" alt="Family-friendly">
+                <h2>Family-friendly</h2>
+                <p>Families of any shape and size are welcome.</p>
+            </div>
+        </section>
+
+        <section class="section testimonials">
+            <h2 class="section__title">Testimonials</h2>
+            <div class="testimonials__reviewer">
+                <p class="testimonials__name">June C.</p>
+                <div class="testimonials__stars">
+                    <span class="material-icons">star</span>
+                    <span class="material-icons">star</span>
+                    <span class="material-icons">star</span>
+                    <span class="material-icons">star</span>
+                    <span class="material-icons">star</span>
+                </div>
+                <div class="testimonials__comment">Took enough photos to fill two scrapbooks! I came for a weekend to spend time with my 11yo daughter and we both loved it. Lots of things to do and a very restful experience.</div>
+            </div>
+            <div class="testimonials__reviewer">
+                <p class="testimonials__name">Nicholas G.</p>
+                <div class="testimonials__stars">
+                    <span class="material-icons">star</span>
+                    <span class="material-icons">star</span>
+                    <span class="material-icons">star</span>
+                    <span class="material-icons">star</span>
+                    <span class="material-icons">star</span>
+                </div>
+                <div class="testimonials__comment">My family of four came to celebrate my son's high school graduation, but we'll definitely be back next summer. The staff were very knowledgeable about the things we could do off the resort too.</div>
+            </div>
+            <div class="testimonials__reviewer">
+                <p class="testimonials__name">Lori A.</p>
+                <div class="testimonials__stars">
+                    <span class="material-icons">star</span>
+                    <span class="material-icons">star</span>
+                    <span class="material-icons">star</span>
+                    <span class="material-icons">star</span>
+                    <span class="material-icons">star</span>
+                </div>
+                <div class="testimonials__comment">Perfect place for a big family reunion! Very clean resort, delicious food. What a great way to catch up on some R&R before going back to work in the fall... didn't want to leave!</div>
+            </div>
+        </section>
+
+        <section class="section instagram">
+            <h2 class="section_title">Follow us on instagram</h2>
+            <p><a href="#">@raywatercottages</a></p>
+            <div class="instagram__layout">
+                <img src="https://picsum.photos/200" alt="">
+                <img src="https://picsum.photos/200" alt="">
+                <img src="https://picsum.photos/200" alt="">
+                <img src="https://picsum.photos/200" alt="">
+                <img src="https://picsum.photos/200" alt="">
+                <img src="https://picsum.photos/200" alt="">
+                <img src="https://picsum.photos/200" alt="">
+                <img src="https://picsum.photos/200" alt="">                
+            </div>
+        </section>
+
+    </main>
+
+    <footer class="footer">
+        <section>
+            <img class="logo" src="https://picsum.photos/200" alt="Raywater Cottage Resort logo">
+            <ul class="socials">
+                <a href="#"></a>
+                <a href="#"></a>
+                <a href="#"></a>
+                <a href="#"></a>
+                <a href="#"></a>
+            </ul>
+            <section class="footer__contact">
+                <h2>Contact</h2>
+                <p>1342 Ontario 11 N</p>
+                <p>Kilworthy, ON P0E 1G0</p>
+                <p>Toll-free: +1-800-461-0243</p>
+                <p>Local: (705) 689-0660</p>
+                <p><a href="#">info@raywatercottages.com</a></p>
+            </section>
+        </section>
+
+        <section class="footer__links">
+            <h2 class="section__title">Quick Links</h2>
+            <p><a href="#">Offers</a></p>
+            <p><a href="#">Book</a></p>
+            <p><a href="#">Cottages</a></p>
+            <p><a href="#">Things to do</a></p>
+            <p><a href="#">Rates</a></p>
+            <p><a href="#">Gallery</a></p>
+            <p><a href="#">About</a></p>
+        </section>
+
+        <section class="footer__legal">
+            <p><a href="#">Terms of service</a></p>
+            <p><a href="#">Privacy policy</a></p>
+            <p><a href="#">Accessibility</a></p>
+            <p><a href="#">Site map</a></p>
+        </section>
+
+        <section class="footer__copyright">
+            <p>&copy; Raywater Cottage Resort, 2021</p>
+        </section>
+    </footer>
   
     
     <script src="js/main.js" type="text/javascript"></script>
