--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Raywater Cottage Resort</title>
     <meta name="description" content="">
     <meta name="author" content="shltr">
-    <link rel="stylesheet" href="css/reset.css" type="text/css">
-    <link rel="stylesheet" href="css/main.css" type="text/css">
+    <link rel="stylesheet" href="src/css/reset.css" type="text/css">
+    <link rel="stylesheet" href="src/css/main.css" type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
