--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Raywater Cottage Resort</title>
     <meta name="description" content="">
     <meta name="author" content="shltr">
-    <link rel="stylesheet" href="src/css/reset.css" type="text/css">
-    <link rel="stylesheet" href="src/css/main.css" type="text/css">
+    <link rel="stylesheet" href="public/css/main.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
@@ -161,7 +160,7 @@
     </footer>
   
     
-    <script src="js/main.js" type="text/javascript"></script>
+    <!-- <script src="js/main.js" type="text/javascript"></script> -->
 
 </body>
 
