Sass structure + first attempt.

--- a/index.html
+++ b/index.html
@@ -13,33 +13,49 @@
 <body>
 
     <header class="header">
-        <img class="logo" src="https://picsum.photos/200" alt="Raywater Cottage Resort logo">
-        <h1>Raywater Cottage Resort</h1>
+        <!-- <div class="logo"><a href="#"></a></div> -->
+        <!-- <div> -->
+            <span class="material-icons menu">menu</span>
+        <!-- </div> -->
+        <a class="button button-small" href="#">Book now</a>
+        <!-- <div class="header__top"> -->
+            <!-- <div class="header__top-left">
+                <img class="logo" src="https://picsum.photos/200" alt="Raywater Cottage Resort logo">
+                <div class="logo"><a href="#"></a></div>
+                <h1><a href="#">Raywater Cottage Resort</a></h1>               
+            </div> -->
+        <!-- </div> -->
+        <!-- <div class="header__bottom"></div> -->
+            
+        </div>
+
     </header>
 
     <main>
         <section class="section hero">
-            <img src="https://picsum.photos/200" alt="Father and daughter overlooking the lake at night">
+            <img class="image-hero" src="img/hero-1.jpg" alt="Father and daughter overlooking the lake at night">
             <h2 class="section__title">Reconnect. Recharge. Your way.</h2>
-            <a href="#">Explore</a>
+            <div>            <a class="button button-normal" href="#">Explore</a></div>
+
         </section>
 
         <section class="section welcome">
             <img class="logo" src="https://picsum.photos/200" alt="Raywater Cottage Resort logo">
-            <p>Welcome to</p>
+            <p class="body-copy">Welcome to</p>
             <h2 class="section__title">Raywater Cottage Resort</h2>
-            <p>Founded over 50 years ago on Lake Muskoka, Raywater is a summer resort that strives to offer relaxing and restful experiences for you and your family.</p>
+            <p class="body-copy">Founded over 50 years ago on Lake Muskoka, Raywater is a summer resort that strives to offer relaxing and restful experiences for you and your family.</p>
         </section>
 
         <section class="section discover">
+            <img class="image-hero" src="img/hero-2.jpg" alt="">
             <h2 class="section__title">Discover</h2>
-            <h3>activities the whole family can enjoy</h3>
-            <a href="#">Explore</a>
+            <h3 class="body-copy">activities the whole family can enjoy</h3>
+            <a class="button button-normal" href="#">Explore</a>
         </section>
 
         <section class="section relax">
             <h2 class="section__title">How do you relax?</h2>
-            <p>Whether you're looking for something with a view or something cozy, we're sure to have something to accommodate you.</p>
+            <p class="body-copy">Whether you're looking for something with a view or something cozy, we're sure to have something to accommodate you.</p>
             <a href="#">Explore</a>
         </section>
 
@@ -47,17 +63,17 @@
             <!-- <h2>Something something something</h2> -->
             <div class="icons__icon">
                 <img src="https://picsum.photos/200" alt="Online booking">
-                <h2>Online booking</h2>
-                <p>Planning an escape has never been easier.</p>
+                <h2 class="heading">Online booking</h2>
+                <p class="body-copy">Planning an escape has never been easier.</p>
             </div>
             <div>
                 <img src="https://picsum.photos/200" alt="Personalized experience">
-                <h2>Personalized experience</h2>
-                <p>Our staff are here to help you create your ideal experience.</p>
+                <h2 class="heading">Personalized experience</h2>
+                <p class="body-copy">Our staff are here to help you create your ideal experience.</p>
             </div>
             <div>
                 <img src="https://picsum.photos/200" alt="Family-friendly">
-                <h2>Family-friendly</h2>
+                <h2 class="heading">Family-friendly</h2>
                 <p>Families of any shape and size are welcome.</p>
             </div>
         </section>
@@ -100,17 +116,17 @@
         </section>
 
         <section class="section instagram">
-            <h2 class="section_title">Follow us on instagram</h2>
-            <p><a href="#">@raywatercottages</a></p>
+            <h2 class="section__title">Follow us on instagram</h2>
+            <p class="body-copy"><a href="#">@raywatercottages</a></p>
             <div class="instagram__layout">
-                <img src="https://picsum.photos/200" alt="">
-                <img src="https://picsum.photos/200" alt="">
-                <img src="https://picsum.photos/200" alt="">
-                <img src="https://picsum.photos/200" alt="">
-                <img src="https://picsum.photos/200" alt="">
-                <img src="https://picsum.photos/200" alt="">
-                <img src="https://picsum.photos/200" alt="">
-                <img src="https://picsum.photos/200" alt="">                
+                <img class="instagram__image" src="img/insta_dock.png" alt="">
+                <img class="instagram__image" src="img/insta_fishing.png" alt="">
+                <img class="instagram__image" src="img/insta_waves.png" alt="">
+                <img class="instagram__image" src="img/insta_hammock.png" alt="">
+                <img class="instagram__image" src="img/insta_picnic.png" alt="">
+                <img class="instagram__image" src="img/insta_boat.png" alt="">
+                <img class="instagram__image" src="img/insta_pier.png" alt="">           
+                <img class="instagram__image" src="img/insta_kids.png" alt="">       
             </div>
         </section>
 
