--- a/index.html
+++ b/index.html
@@ -15,7 +15,17 @@
     <header class="header">
         <!-- <div class="logo"><a href="#"></a></div> -->
         <!-- <div> -->
-            <button class="button-menu"><span class="material-icons menu">menu</span></button>
+        <button class="button-menu"><span class="material-icons menu">menu</span></button>
+        
+        <nav class="nav menu__closed">
+            <ul>
+                <li class="body-copy">Offers & Rates</li>
+                <li class="body-copy">Cottages</li>
+                <li class="body-copy">Things to do</li>
+                <li class="body-copy">Gallery</li>
+                <li class="body-copy">About</li>
+            </ul>
+        </nav>
         <!-- </div> -->
         <a class="button button-small" href="#">Book now</a>
         <!-- <div class="header__top"> -->
@@ -200,7 +210,7 @@
 
   
     
-    <!-- <script src="js/main.js" type="text/javascript"></script> -->
+    <script src="main.js" type="text/javascript"></script>
 
 </body>
 
