Misc changes to mobile.

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         
         <nav class="nav menu__closed">
             <ul>
-                <li class="body-copy">Offers & Rates</li>
-                <li class="body-copy">Cottages</li>
-                <li class="body-copy">Things to do</li>
-                <li class="body-copy">Gallery</li>
-                <li class="body-copy">About</li>
+                <li class="body-copy"><a href="#">Offers & Rates</a></li>
+                <li class="body-copy"><a href="#">Cottages</a></li>
+                <li class="body-copy"><a href="#">Things to do</a></li>
+                <li class="body-copy"><a href="#">Gallery</a></li>
+                <li class="body-copy"><a href="#">About</a></li>
             </ul>
         </nav>
         <!-- </div> -->
@@ -46,7 +46,7 @@
             <img class="image-hero" src="img/hero-1.jpg" alt="Father and daughter overlooking the lake at night">
             <div class="blurb__cta">  
                 <h2 class="section__title">Reconnect. Recharge. Your way.</h2>          
-                <a class="button button-normal" href="#">Explore</a>
+                <a class="button button-long" href="#">Explore</a>
             </div>
 
         </section>
@@ -67,18 +67,18 @@
             <div class="blurb__cta">
                 <h2 class="section__title">Discover</h2>
                 <h3 class="body-copy">activities the whole family can enjoy</h3>
-                <a class="button button-normal" href="#">Explore</a>
+                <a class="button button-long" href="#">Explore</a>
             </div>
 
         </section>
 
         <section class="section relax">
-            <img class="image" src="img/relax_chairs.jpg" alt="Muskoka chairs overlooking the lake">
+            <!-- <img class="image" src="img/relax_chairs.jpg" alt="Muskoka chairs overlooking the lake"> -->
             <img class="image" src="img/relax_bed.jpg" alt="Cozy bedroom">
             <div class="blurb__cta">
                 <h2 class="section__title">How do you relax?</h2>
                 <p class="body-copy">Whether you're looking for something with a view or something cozy, we're sure to have something to accommodate you.</p>
-                <a class="button button-normal" href="#">Explore</a>
+                <a class="button button-long" href="#">Explore</a>
             </div>
 
         </section>
