Tablet excluding footer, need to fix icon section.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <section class="section welcome">
             <img class="logo" src="img/logo_raywater-cropped.png" alt="Raywater Cottage Resort logo">
-            <div class="blurb">
+            <div class="container blurb">
                 <p class="body-copy">Welcome to</p>
                 <h2 class="section__title">Raywater Cottage Resort</h2>
                 <p class="body-copy">Founded over 50 years ago on Lake Muskoka, Raywater is a summer resort that strives to offer relaxing and restful experiences for you and your family.</p>     
@@ -75,7 +75,7 @@
         <section class="section relax">
             <!-- <img class="image" src="img/relax_chairs.jpg" alt="Muskoka chairs overlooking the lake"> -->
             <img class="image" src="img/relax_bed.jpg" alt="Cozy bedroom">
-            <div class="blurb__cta">
+            <div class="container blurb__cta">
                 <h2 class="section__title">How do you relax?</h2>
                 <p class="body-copy">Whether you're looking for something with a view or something cozy, we're sure to have something to accommodate you.</p>
                 <a class="button button-long" href="#">Explore</a>
@@ -85,66 +85,69 @@
 
         <section class="section icons">
             <!-- <h2>Something something something</h2> -->
-            <div class="icons__icon">
-                <img class="image" src="img/icon_calendar.svg" alt="Online booking">
-                <div class="blurb">
-                    <h2 class="heading">Online booking</h2>
-                    <p class="body-copy">Planning an escape has never been easier.</p>
+            <div class="icons__all">
+                <div class="icons__icon">
+                    <img class="image" src="img/icon_calendar.svg" alt="Online booking">
+                    <div class="blurb">
+                        <h2 class="heading">Online booking</h2>
+                        <p class="body-copy">Planning an escape has never been easier.</p>
+                    </div>
+                </div>
+    
+                <div class="icons__icon">
+                    <img class="image" src="img/icon_personalized.svg" alt="Personalized experience">
+                    <div class="blurb">
+                        <h2 class="heading">Personalized</h2>
+                        <p class="body-copy">Our staff are here to help you create your ideal experience.</p>
+                    </div>
+                </div>
+    
+                <div class="icons__icon">
+                    <img class="image" src="img/icon_family.svg" alt="Family-friendly">
+                    <div class="blurb">
+                        <h2 class="heading">Family-friendly</h2>
+                        <p class="body-copy">Families of any shape and size are welcome.</p>
+                    </div>
                 </div>
             </div>
-
-            <div class="icons__icon">
-                <img class="image" src="img/icon_personalized.svg" alt="Personalized experience">
-                <div class="blurb">
-                    <h2 class="heading">Personalized experience</h2>
-                    <p class="body-copy">Our staff are here to help you create your ideal experience.</p>
-                </div>
-            </div>
-
-            <div class="icons__icon">
-                <img class="image" src="img/icon_family.svg" alt="Family-friendly">
-                <div class="blurb">
-                    <h2 class="heading">Family-friendly</h2>
-                    <p class="body-copy">Families of any shape and size are welcome.</p>
-                </div>
-            </div>
-
         </section>
 
         <section class="section testimonials">
             <h2 class="section__title">Testimonials</h2>
-            <div class="testimonials__review">
-                <h3 class="testimonials__name heading">June C.</h3>
-                <div class="testimonials__stars">
-                    <span class="material-icons">star</span>
-                    <span class="material-icons">star</span>
-                    <span class="material-icons">star</span>
-                    <span class="material-icons">star</span>
-                    <span class="material-icons">star</span>
+            <div class="container testimonials__all">
+                <div class="testimonials__review">
+                    <h3 class="testimonials__name heading">June C.</h3>
+                    <div class="testimonials__stars">
+                        <span class="material-icons">star</span>
+                        <span class="material-icons">star</span>
+                        <span class="material-icons">star</span>
+                        <span class="material-icons">star</span>
+                        <span class="material-icons">star</span>
+                    </div>
+                    <div class="testimonials__comment body-copy">Took enough photos to fill two scrapbooks! I came for a weekend to spend time with my 11yo daughter and we both loved it. Lots of things to do and a very restful experience.</div>
                 </div>
-                <div class="testimonials__comment body-copy">Took enough photos to fill two scrapbooks! I came for a weekend to spend time with my 11yo daughter and we both loved it. Lots of things to do and a very restful experience.</div>
-            </div>
-            <div class="testimonials__review">
-                <h3 class="testimonials__name heading">Nicholas G.</h3>
-                <div class="testimonials__stars">
-                    <span class="material-icons">star</span>
-                    <span class="material-icons">star</span>
-                    <span class="material-icons">star</span>
-                    <span class="material-icons">star</span>
-                    <span class="material-icons">star</span>
+                <div class="testimonials__review">
+                    <h3 class="testimonials__name heading">Nicholas G.</h3>
+                    <div class="testimonials__stars">
+                        <span class="material-icons">star</span>
+                        <span class="material-icons">star</span>
+                        <span class="material-icons">star</span>
+                        <span class="material-icons">star</span>
+                        <span class="material-icons">star</span>
+                    </div>
+                    <div class="testimonials__comment body-copy">My family of four came to celebrate my son's high school graduation, but we'll definitely be back next summer. The staff were very knowledgeable about the things we could do off the resort too.</div>
                 </div>
-                <div class="testimonials__comment body-copy">My family of four came to celebrate my son's high school graduation, but we'll definitely be back next summer. The staff were very knowledgeable about the things we could do off the resort too.</div>
-            </div>
-            <div class="testimonials__review">
-                <h3 class="testimonials__name heading">Lori A.</h3>
-                <div class="testimonials__stars">
-                    <span class="material-icons">star</span>
-                    <span class="material-icons">star</span>
-                    <span class="material-icons">star</span>
-                    <span class="material-icons">star</span>
-                    <span class="material-icons">star</span>
+                <div class="testimonials__review">
+                    <h3 class="testimonials__name heading">Lori A.</h3>
+                    <div class="testimonials__stars">
+                        <span class="material-icons">star</span>
+                        <span class="material-icons">star</span>
+                        <span class="material-icons">star</span>
+                        <span class="material-icons">star</span>
+                        <span class="material-icons">star</span>
+                    </div>
+                    <div class="testimonials__comment body-copy">Perfect place for a big family reunion! Very clean resort, delicious food. What a great way to catch up on some R&R before going back to work in the fall... didn't want to leave!</div>
                 </div>
-                <div class="testimonials__comment body-copy">Perfect place for a big family reunion! Very clean resort, delicious food. What a great way to catch up on some R&R before going back to work in the fall... didn't want to leave!</div>
             </div>
         </section>
 
@@ -165,13 +168,16 @@
 
         <footer class="footer">
             <section>
-                <img class="logo" src="img/logo_raywater-cropped.png" alt="Raywater Cottage Resort logo">
-                <ul class="socials">
-                    <li><a class="icon" href="#"><img src="img/socials_facebook.svg" alt=""></a></li>
-                    <li><a class="icon" href="#"><img src="img/socials_instagram.svg" alt=""></a></li>
-                    <li><a class="icon" href="#"><img src="img/socials_twitter.svg" alt=""></a></li>
-                    <li><a class="icon" href="#"><img src="img/socials_youtube.svg" alt=""></a></li>     
-                </ul>
+                <div>
+                    <img class="logo" src="img/logo_raywater-cropped.png" alt="Raywater Cottage Resort logo">
+                    <ul class="socials">
+                        <li><a class="icon" href="#"><img src="img/socials_facebook.svg" alt=""></a></li>
+                        <li><a class="icon" href="#"><img src="img/socials_instagram.svg" alt=""></a></li>
+                        <li><a class="icon" href="#"><img src="img/socials_twitter.svg" alt=""></a></li>
+                        <li><a class="icon" href="#"><img src="img/socials_youtube.svg" alt=""></a></li>     
+                    </ul>
+                </div>
+
                 <section class="footer__contact">
                     <h2 class="section__title">Contact</h2>
                     <p class="body-copy">1342 Ontario 11 N</p>
