--- a/index.html
+++ b/index.html
@@ -15,19 +15,26 @@
     <header class="header">
         <!-- <div class="logo"><a href="#"></a></div> -->
         <!-- <div> -->
-        <button class="button-menu"><span class="material-icons menu">menu</span></button>
-        
-        <nav class="nav menu__closed">
-            <ul>
-                <li class="body-copy"><a href="#">Offers & Rates</a></li>
-                <li class="body-copy"><a href="#">Cottages</a></li>
-                <li class="body-copy"><a href="#">Things to do</a></li>
-                <li class="body-copy"><a href="#">Gallery</a></li>
-                <li class="body-copy"><a href="#">About</a></li>
-            </ul>
-        </nav>
+        <div class="header__top">
+            <button class="button-menu"><span class="material-icons menu">menu</span></button>
+            <img class="logo" src="img/logo_raywater-cropped.png" alt="logo">
+            <a class="button button-small" href="#">Book now</a>
+        </div>
+
+        <div class="header__bottom">
+            <nav class="nav menu__closed">
+                <ul>
+                    <li class="body-copy"><a href="#">Offers & Rates</a></li>
+                    <li class="body-copy"><a href="#">Cottages</a></li>
+                    <li class="body-copy"><a href="#">Things to do</a></li>
+                    <li class="body-copy"><a href="#">Gallery</a></li>
+                    <li class="body-copy"><a href="#">About</a></li>
+                </ul>
+            </nav>
+        </div>
+
         <!-- </div> -->
-        <a class="button button-small" href="#">Book now</a>
+
         <!-- <div class="header__top"> -->
             <!-- <div class="header__top-left">
                 <img class="logo" src="https://picsum.photos/200" alt="Raywater Cottage Resort logo">
@@ -43,7 +50,7 @@
 
     <main>
         <section class="section hero">
-            <img class="image-hero" src="img/hero-1.jpg" alt="Father and daughter overlooking the lake at night">
+            <img class="image-hero" src="img/hero-1-resized.jpg" alt="Father and daughter overlooking the lake at night">
             <div class="blurb__cta">  
                 <h2 class="section__title">Reconnect. Recharge. Your way.</h2>          
                 <a class="button button-long" href="#">Explore</a>
@@ -62,7 +69,7 @@
         </section>
 
         <section class="section discover">
-            <img class="image-hero" src="img/hero-2.jpg" alt="">
+            <img class="image-hero" src="img/hero-2-resized.jpg" alt="">
 
             <div class="blurb__cta">
                 <h2 class="section__title">Discover</h2>
