--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <!-- <h2>Something something something</h2> -->
             <div class="icons__all">
                 <div class="icons__icon">
-                    <img class="image" src="img/icon_calendar.svg" alt="Online booking">
+                    <img class="image" src="img/icon_calendar.png" alt="Online booking">
                     <div class="blurb">
                         <h2 class="heading">Online booking</h2>
                         <p class="body-copy">Planning an escape has never been easier.</p>
@@ -102,7 +102,7 @@
                 </div>
     
                 <div class="icons__icon">
-                    <img class="image" src="img/icon_personalized.svg" alt="Personalized experience">
+                    <img class="image" src="img/icon_personalized.png" alt="Personalized experience">
                     <div class="blurb">
                         <h2 class="heading">Personalized</h2>
                         <p class="body-copy">Our staff are here to help you create your ideal experience.</p>
@@ -110,7 +110,7 @@
                 </div>
     
                 <div class="icons__icon">
-                    <img class="image" src="img/icon_family.svg" alt="Family-friendly">
+                    <img class="image" src="img/icon_family.png" alt="Family-friendly">
                     <div class="blurb">
                         <h2 class="heading">Family-friendly</h2>
                         <p class="body-copy">Families of any shape and size are welcome.</p>
