--- a/index.html
+++ b/index.html
@@ -13,39 +13,27 @@
 <body>
 
     <header class="header">
-        <!-- <div class="logo"><a href="#"></a></div> -->
-        <!-- <div> -->
-        <div class="header__top">
-            <button class="button-menu"><span class="material-icons menu">menu</span></button>
-            <img class="logo" src="img/logo_raywater-cropped.png" alt="logo">
-            <a class="button button-small" href="#">Book now</a>
-        </div>
+        
+        <!-- menu button -->
+        <button class="button-menu"><span class="material-icons menu">menu</span></button>
 
-        <div class="header__bottom">
-            <nav class="nav menu__closed">
-                <ul>
-                    <li class="body-copy"><a href="#">Offers & Rates</a></li>
-                    <li class="body-copy"><a href="#">Cottages</a></li>
-                    <li class="body-copy"><a href="#">Things to do</a></li>
-                    <li class="body-copy"><a href="#">Gallery</a></li>
-                    <li class="body-copy"><a href="#">About</a></li>
-                </ul>
-            </nav>
-        </div>
+        <!-- logo -->
+        <img class="logo" src="img/logo_raywater-cropped.png" alt="logo">
 
-        <!-- </div> -->
+        <!-- nav menu -->
+        <nav class="nav menu__closed">
+            <ul>
+                <li class="body-copy"><a href="#">Offers & Rates</a></li>
+                <li class="body-copy"><a href="#">Cottages</a></li>
+                <li class="body-copy"><a href="#">Things to do</a></li>
+                <li class="body-copy"><a href="#">Gallery</a></li>
+                <li class="body-copy"><a href="#">About</a></li>
+            </ul>
+        </nav>
 
-        <!-- <div class="header__top"> -->
-            <!-- <div class="header__top-left">
-                <img class="logo" src="https://picsum.photos/200" alt="Raywater Cottage Resort logo">
-                <div class="logo"><a href="#"></a></div>
-                <h1><a href="#">Raywater Cottage Resort</a></h1>               
-            </div> -->
-        <!-- </div> -->
-        <!-- <div class="header__bottom"></div> -->
+        <!-- book now button -->
+        <a class="book button button-small" href="#">Book now</a>
             
-        </div>
-
     </header>
 
     <main>
